<resources>
    <string name="app_name">Study Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="courseLabel">Course</string>
    <string name="questionLabel">Question</string>
    <string name="answerLabel">Answer</string>
    <string name="playButton">Play</string>
    <string name="editButton">Edit</string>
    <string name="newCourseButton">New Course</string>
    <string name="countLabel">Questions:</string>
    <string name="gameCountLabel">0/0</string>
    <string name="newQuestionButton">New Questions</string>
    <string name="showButton">show</string>
    <string name="hideButton">hide</string>
    <string name="saveButton">Save</string>
    <string name="selectButton">Select</string>
    <string name="editQuestionText">custom Question</string>
    <string name="editAnswerText">custom Answer</string>
    <string name="nextButtonText">Next</string>
    <string name="editButtonSaveText">Save</string>
    <string name="editAnswerActivityTitle">Edit Answer</string>
    <string name="editQuestionActivityTitle">Edit Question</string>
</resources>
