<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editAnswerActivityTitle"
        android:id="@+id/editAnswerActivity"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:textColor="@color/buttonColor"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAnswerTextMain"
        android:layout_weight="0.16"
        android:text="@string/editAnswerText"
        android:textColor="@color/buttonColor"
        android:textSize="25dp"
        android:editable="true"
        android:layout_marginTop="120dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.5" />

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:text="@string/editButtonSaveText"
        android:id="@+id/EditButtonSave"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:onClick="saveEdit" />
</LinearLayout>