<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:alignmentMode="alignMargins"
    android:paddingTop="0dp"
    android:paddingStart="0dp"
    android:background="@color/background"
    android:alpha="1"
    android:baselineAligned="false"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/courseLabel"
        android:id="@+id/courseLabel"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/prevButton"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/buttonColor"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionLabel"
        android:id="@+id/questionLabel"
        android:layout_below="@+id/courseLabel"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/buttonColor"
        android:textAlignment="center" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answerLabel"
        android:id="@+id/answerLabel"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/courseLabel"
        android:textColor="@color/buttonColor"
        android:textAlignment="textStart"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/showButton"
        android:id="@+id/displayAnswerBtn"
        android:layout_above="@+id/prevButton"
        android:layout_alignStart="@+id/answerLabel"
        android:onClick="displayAnswer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210dp"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="prev"
            android:id="@+id/prevButton"
            android:onClick="prevClick"
            android:layout_alignTop="@+id/nextButton"
            android:layout_toEndOf="@+id/gameCountLabel"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonColor"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />

        <Space
            android:layout_width="80dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/nextButton"
            android:onClick="nextClick"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/answerLabel"
            android:background="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gameCountLabel"
        android:id="@+id/gameCountLabel"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_below="@+id/prevButton"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/buttonColor" />


</LinearLayout>